--- a/preprocessing/base.html
+++ b/preprocessing/base.html
@@ -1,164 +1,137 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/svg+xml" href="/resources/favicon.svg" />
-        <link rel="mask-icon" href="/resources/favicon.svg" color="red" />
 
-        <!-- inject:analytics -->
-        <!-- endinject -->
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/resources/favicon.svg" />
+    <link rel="mask-icon" href="/resources/favicon.svg" color="red" />
 
-        <title>Shot-Plotter</title>
+    <!-- inject:analytics -->
+    <!-- endinject -->
 
-        <!-- Google fonts -->
-        <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600"
-            rel="stylesheet"
-            type="text/css"
-        />
-        <!-- @if SPORT='football-nfl' || SPORT='football-ncaa' -->
-        <link
-            href="https://fonts.googleapis.com/css?family=Domine:400,300,600"
-            rel="stylesheet"
-            type="text/css"
-        />
-        <!-- @endif -->
+    <title>Shot-Plotter</title>
 
-        <!-- localDataStorage -->
-        <script
-            src="https://cdn.jsdelivr.net/gh/macmcmeans/localDataStorage@master/localDataStorage-3.0.0.min.js"
-            crossorigin="anonymous"
-        ></script>
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css" />
+    <!-- @if SPORT='football-nfl' || SPORT='football-ncaa' -->
+    <link href="https://fonts.googleapis.com/css?family=Domine:400,300,600" rel="stylesheet" type="text/css" />
+    <!-- @endif -->
 
-        <!-- lodash -->
-        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <!-- localDataStorage -->
+    <script src="https://cdn.jsdelivr.net/gh/macmcmeans/localDataStorage@master/localDataStorage-3.0.0.min.js"
+        crossorigin="anonymous"></script>
 
-        <!-- UUID -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
+    <!-- lodash -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
-        <!-- downloadjs -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"
-            integrity="sha512-WiGQZv8WpmQVRUFXZywo7pHIO0G/o3RyiAJZj8YXNN4AV7ReR1RYWVmZJ6y3H06blPcjJmG/sBpOVZjTSFFlzQ=="
-            crossorigin="anonymous"
-        ></script>
+    <!-- UUID -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
 
-        <!-- PapaParse -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"
-            integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA=="
-            crossorigin="anonymous"
-        ></script>
+    <!-- downloadjs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"
+        integrity="sha512-WiGQZv8WpmQVRUFXZywo7pHIO0G/o3RyiAJZj8YXNN4AV7ReR1RYWVmZJ6y3H06blPcjJmG/sBpOVZjTSFFlzQ=="
+        crossorigin="anonymous"></script>
 
-        <!-- D3.js -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.6.0/d3.min.js"
-            integrity="sha512-XgjkLS0sSzUq88GniFcrLy6zjgVWkBoRFziaLm1Z+gVgkHuO3ieikhD/Q6eNKXAsp88yvBFS0n6ovVlabXftIg=="
-            crossorigin="anonymous"
-        ></script>
+    <!-- PapaParse -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"
+        integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA=="
+        crossorigin="anonymous"></script>
 
-        <!-- SortableJS :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
-        <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <!-- D3.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.6.0/d3.min.js"
+        integrity="sha512-XgjkLS0sSzUq88GniFcrLy6zjgVWkBoRFziaLm1Z+gVgkHuO3ieikhD/Q6eNKXAsp88yvBFS0n6ovVlabXftIg=="
+        crossorigin="anonymous"></script>
 
-        <!-- JQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- SortableJS :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 
-        <!-- Select2 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-            rel="stylesheet"
-        />
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-        <!-- TockTimer -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/tocktimer/1.1.0/tock.min.js"
-            integrity="sha512-vq5wJzEIsMaUGpNliTdBuAuvevdVhlFcbSKtz+YgJwfriIN03L20HoPnmywMcmjom64KLcjnBfTV3CSn2Y0rOg=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+    <!-- Select2 -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-        <!-- Bootstrap -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-            crossorigin="anonymous"
-        />
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-            integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-            crossorigin="anonymous"
-        ></script>
+    <!-- TockTimer -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocktimer/1.1.0/tock.min.js"
+        integrity="sha512-vq5wJzEIsMaUGpNliTdBuAuvevdVhlFcbSKtz+YgJwfriIN03L20HoPnmywMcmjom64KLcjnBfTV3CSn2Y0rOg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-        <!-- Bootstrap Icons -->
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
-        />
-        <link rel="stylesheet" href="/index.css" />
-    </head>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
 
-    <body>
-        <!-- inject:banner -->
-        <!-- endinject -->
-        <div class="center header">
-            <h1>Shot-Plotter</h1>
-        </div>
-        <div class="center medium-text">
-            A graphical interface for tracking locational events in sports.
-            Click on the playing area to log an event!
-        </div>
-        <hr />
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="/index.css" />
+</head>
 
-        <div class="main">
+<body>
+    <!-- inject:banner -->
+    <!-- endinject -->
+    <div class="center header">
+        <h1>Shot-Plotter</h1>
+    </div>
+    <div class="center medium-text">
+        A graphical interface for tracking locational events in sports.
+        Click on the playing area to log an event!
+    </div>
+    <hr />
+
+    <div class="main">
+        <div class="d-flex flex-column">
             <div id="details" class="shot-info"></div>
-            <div class="center">
-                <div>
-                    <div id="toggles"></div>
-                    <div id="playing-area">
-                        <!-- inject:playingarea -->
-                        <!-- endinject -->
+            <div class="d-flex flex-column mt-3">
+                <div class="input-group mb-3">
+                    <input id="video-url" type="text" class="form-control"
+                        aria-label="Text input with segmented dropdown button" placeholder="Video URL">
+                    <div class="input-group-append">
+                        <button id="video-run-btn" type="button" class="btn btn-outline-secondary">Run</button>
                     </div>
-                    <div class="center">
-                        <div id="legend"></div>
-                    </div>
+                </div>
+                <video class="mb-3" width="320" style="width: 100%;" id="video" controls></video>
+                <div class="btn-group mb-1" role="group">
+                    <button id="video-start-btn" type="button" class="btn btn-success" disabled> Set Video Start
+                        Time</button>
+                    <button id="video-sync-btn" type="button" class="btn btn-primary" disabled>Synchronize</button>
+                </div>
+                <p>
+                    Video start time: <span id="video-start-time">0</span>
+                </p>
+            </div>
+        </div>
+        <div class="center">
+            <div>
+                <div id="toggles"></div>
+                <div id="playing-area">
+                    <!-- inject:playingarea -->
+                    <!-- endinject -->
+                </div>
+                <div class="center">
+                    <div id="legend"></div>
                 </div>
             </div>
         </div>
-        <table id="shot-table" class="table shot-table"></table>
-        <div id="csv-upload-download"></div>
-        <div id="details-modal"></div>
-        <div id="delete-all-modal"></div>
-        <hr />
-        <script type="module" src="/setup.js"></script>
-        <script type="module">
-            import { setup } from "/setup.js";
-            setup("<!-- @echo SPORT -->");
-        </script>
-        <!-- bootstrap -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-            crossorigin="anonymous"
-        ></script>
-    </body>
-    <footer class="center">
-        <span>
-            Website built by An Nguyen primarily using D3.js. Source code and
-            details on how to use the app are available on
-            <a href="https://github.com/nguyenank/shot-plotter">Github</a>.
-            <!-- @if SPORT='football-nfl' || SPORT='football-ncaa' -->
-            Playing area made using
-            <a href="https://github.com/rossdrucker/sportyR">sportyR</a>, an R
-            package by
-            <a href="https://twitter.com/rossdrucker9">Ross Drucker</a>.
-            <!-- @endif -->
-            Contact me with bugs/feedback/suggestions/etc. on
-            <a href="https://bsky.app/profile/nguyenank.bsky.social">BlueSky</a
-            >a>, <a href="https://www.linkedin.com/in/nguyenank/">LinkedIn</a>,
-            or by <a id="email" href="">email</a>.
-        </span>
-    </footer>
+    </div>
+    <table id="shot-table" class="table shot-table"></table>
+    <div id="csv-upload-download"></div>
+    <div id="details-modal"></div>
+    <div id="delete-all-modal"></div>
+    <hr />
+    <script type="module" src="/js/hls.js"></script>
+    <script type="module" src="/setup.js"></script>
+    <script type="module">
+        import { setup } from "/setup.js";
+        setup("<!-- @echo SPORT -->");
+    </script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
