--- a/html/soccer-ncaa.html
+++ b/html/soccer-ncaa.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/resources/favicon.svg" />
-    <link rel="mask-icon" href="/resources/favicon.svg" color="red" />
+    <link rel="icon" type="image/svg+xml" href="../resources/favicon.svg" />
+    <link rel="mask-icon" href="../resources/favicon.svg" color="red" />
 
     <!-- inject:analytics -->
     <!-- endinject -->
@@ -64,7 +64,7 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="../index.css" />
 </head>
 
 <body>
@@ -213,8 +213,8 @@
     <div id="details-modal"></div>
     <div id="delete-all-modal"></div>
     <hr />
-    <script type="module" src="/js/hls.js"></script>
-    <script type="module" src="/setup.js"></script>
+    <script type="module" src="../js/hls.js"></script>
+    <script type="module" src="../setup.js"></script>
     <script type="module">
         import { setup } from "/setup.js";
         setup("soccer-ncaa");
