--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/resources/favicon.svg" />
-    <link rel="mask-icon" href="/resources/favicon.svg" color="red" />
+    <link rel="icon" type="image/svg+xml" href="../resources/favicon.svg" />
+    <link rel="mask-icon" href="../resources/favicon.svg" color="red" />
 
     <!-- inject:analytics -->
     <!-- endinject -->
@@ -21,7 +21,7 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
 
     <!-- custom stylesheet -->
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="../index.css" />
 </head>
 
 <body>
